--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Forty</h1>
+								<h1>BioClade</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>As a pioneer of open access publishing, BioClade<br />
+								has an evolving portfolio of high quality peer-reviewed<br />
+								journals including broad interest and specialist titles.<br />
+								We are commited to innovation to better support the needs<br />
+								of our communities.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
