--- a/index.html
+++ b/index.html
@@ -43,14 +43,13 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>BioClade</h1>
+								<h1>BioClade: Open Access Peer-Reviewed Publishing</h1>
 							</header>
 							<div class="content">
-								<p>As a pioneer of open access publishing, BioClade<br />
-								has an evolving portfolio of high quality peer-reviewed<br />
-								journals including broad interest and specialist titles.<br />
-								We are commited to innovation to better support the needs<br />
-								of our communities.</p>
+								<p>We are committed to continuous innovation to<br />
+								to better support the needs of our communities.<br />
+								</p>
+						
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
