--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>BioClade: Open Access Peer-Reviewed Publishing</h1>
+								<h1>BioClade: Open Access Publishing</h1>
 							</header>
 							<div class="content">
 								<p>We are committed to continuous innovation to<br />
