--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								</p>
 						
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">Browse Subjects</a></li>
 								</ul>
 							</div>
 						</div>
@@ -67,7 +67,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
+										<h3><a href="landing.html" class="link">Biomedicine</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -76,7 +76,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
+										<h3><a href="landing.html" class="link">Biotechnology</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
@@ -85,7 +85,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
+										<h3><a href="landing.html" class="link">Environment</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
@@ -94,7 +94,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
+										<h3><a href="landing.html" class="link">Life Sciences</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
@@ -103,7 +103,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
+										<h3><a href="landing.html" class="link">Materials Science</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -112,7 +112,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
+										<h3><a href="landing.html" class="link">Public Health</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
