--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Biomedicine</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<p>Application of biological principles to clinical practices</p>
 									</header>
 								</article>
 								<article>
@@ -77,7 +77,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Biotechnology</a></h3>
-										<p>feugiat amet tempus</p>
+										<p>Development and application of molecular techniques</p>
 									</header>
 								</article>
 								<article>
@@ -86,7 +86,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Environment</a></h3>
-										<p>Lorem etiam nullam</p>
+										<p>Integration of biological systems with environmental systems</p>
 									</header>
 								</article>
 								<article>
@@ -95,7 +95,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Life Sciences</a></h3>
-										<p>Nisl sed aliquam</p>
+										<p>Broad scope inquiries of emerging concepts</p>
 									</header>
 								</article>
 								<article>
@@ -104,7 +104,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Materials Science</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<p>Investigating structural applications of substances</p>
 									</header>
 								</article>
 								<article>
@@ -113,7 +113,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Public Health</a></h3>
-										<p>Feugiat amet tempus</p>
+										<p>Broad analysis of populations and practical development</p>
 									</header>
 								</article>
 							</section>
