--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/Life.gif" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Life Sciences</a></h3>
