--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/DNA.gif" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Biomedicine</a></h3>
