--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/DNA.gif" alt="" />
+										<img src="images/Med.gif" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Biomedicine</a></h3>
@@ -73,7 +73,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pharma.jpg" alt="" />
+										<img src="images/DNA.gif" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Biotechnology</a></h3>
@@ -82,7 +82,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/Env.gif" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Environment</a></h3>
@@ -100,7 +100,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/Materials.gif" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Materials Science</a></h3>
@@ -109,7 +109,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/Pub.gif" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Public Health</a></h3>
