--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									<header class="major">
 										<h2>Submissions</h2>
 									</header>
-									<p>Please conctact us to get started with the editorial exchange process.</p>
+									<p>Please contact us to get started with the editorial exchange process.</p>
 									<ul class="actions">
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
@@ -151,6 +151,17 @@
 											<label for="message">Message</label>
 											<textarea name="message" id="message" rows="6"></textarea>
 										</div>
+									</div>
+									<div class="col-12">
+													<select name="demo-category" id="demo-category">
+													<option value=""> -Subject- </option>
+													<option value="1">Biomedicine</option>
+													<option value="1">Biotechnology</option>
+													<option value="1">Environment</option>
+													<option value="1">Life Sciences</option>
+													<option value="1">Materials Science</option>
+													<option value="1">Public Health</option>
+													</select>
 									</div>
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="primary" /></li>
