--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 										
 										</div>
 										<div class="field">
-											<label for="message">Message</label>
+											<label for="message">Abstract</label>
 											<textarea name="message" id="message" rows="6"></textarea>
 										</div>
 										<div class="field">
