--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
 
 				<!-- Banner -->
 					<section id="banner" class="major">
+						
+						<article>
+									<span class="image">
+										<img src="images/Med.gif" alt="" />
+									</span>
+							
+						</article>
 						<div class="inner">
 							<header class="major">
 								<h1>BioClade: Open Access Publishing</h1>
