--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						
 						<article>
 									<span class="image">
-										<img src="images/DNA.gif" alt="" />
+										<img src="images/Life.gif" alt="" />
 									</span>
 							
 						</article>
