--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/DNA.gif" alt="" />
+										<img src="images/Materials.gif" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Biotechnology</a></h3>
-										<p>Development and application of molecular techniques</p>
+										<h3><a href="landing.html" class="link">Biotechnology & Materials Science</a></h3>
+										<p>Development and investigation of molecular techniques and substances</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/Env.gif" alt="" />
+										<img src="images/DNA.gif" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Environment</a></h3>
-										<p>Integration of biological systems with environmental systems</p>
+										<h3><a href="landing.html" class="link">Life Sciences & Public Health</a></h3>
+										<p>Broad analysis of biological systems and populations</p>
 									</header>
 								</article>
 								<article>
@@ -101,28 +101,11 @@
 										<img src="images/Life.gif" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Life Sciences</a></h3>
-										<p>Broad scope inquiries of emerging concepts</p>
+										<h3><a href="landing.html" class="link">Environment</a></h3>
+										<p>Integration and dependence of environmental systems</p>
 									</header>
 								</article>
-								<article>
-									<span class="image">
-										<img src="images/Materials.gif" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Materials Science</a></h3>
-										<p>Investigating structural applications of substances</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/Pub.gif" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Public Health</a></h3>
-										<p>Broad analysis of populations and practical development</p>
-									</header>
-								</article>
+								
 							</section>
 
 						<!-- Two -->
