--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						
 						<article>
 									<span class="image">
-										<img src="images/FMA.gif" alt="" />
+										<img src="images/Wave.gif" alt="" />
 									</span>
 							
 						</article>
@@ -98,7 +98,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/Life.gif" alt="" />
+										<img src="images/Tree.gif" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Environment</a></h3>
