--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/DNA.gif" alt="" />
+										<img src="images/FMA.gif" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Life Sciences & Public Health</a></h3>
