--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						
 						<article>
 									<span class="image">
-										<img src="images/Wave.gif" alt="" />
+										<img src="images/FMA.gif" alt="" />
 									</span>
 							
 						</article>
@@ -71,7 +71,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/Med.gif" alt="" />
+										<img src="images/pharma.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Biomedicine</a></h3>
@@ -80,7 +80,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/Materials.gif" alt="" />
+										<img src="images/Molecule.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Biotechnology & Materials Science</a></h3>
@@ -89,7 +89,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/FMA.gif" alt="" />
+										<img src="images/Cells.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Life Sciences & Public Health</a></h3>
@@ -98,7 +98,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/Tree.gif" alt="" />
+										<img src="images/Envi.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Environment</a></h3>
